# dergdrop

./: .env  .gitignore  Cargo.toml
.cargo/: config.toml
migrations/: 20230927142146_store.sql
src/: dlstream.rs  err.rs  header.rs  main.rs  store.rs  upload.rs
src/state/: mod.rs  upload.rs
src/store/: mod.rs  worker.rs
web/: bun.lockb  index.html  package.json  tailwind.config.js  vite.config.ts  windi.config.ts
web/src/: App.svelte  main.ts
web/src/lib/: Done.svelte  Download.svelte  FileDrop.svelte  Uploader.svelte  meta.ts  streams.ts  upload.ts  util.ts
