[package]
name = "dergdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }

axum = { version = "0.6.20", features = ["tracing"] }

sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres"] }

dotenv = "0.15.0"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

eyre = "0.6.8"
color-eyre = "0.6.2"
