[package]
name = "dergdrop"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3.28"
futures-util = "0.3.28"
flume = "0.11.0"
pin-project = "1.1.3"

axum = { version = "0.6.20", features = ["ws", "macros"] }
headers = "0.3.9"

sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid"] }

dotenvy = "0.15.7"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

eyre = "0.6.8"
color-eyre = "0.6.2"

uuid = { version = "1.4.1", features = ["v4", "v7", "serde"] }

serde = "1.0.188"
bytes = "1.5.0"
